--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -5,11 +5,14 @@ on:
     branches: [ master ]
 #   pull_request:
 #     branches: [ master ]
-
+env:
+  GitHubPackageFeedUrl: https://nuget.pkg.github.com/(your-organisation-name)/index.json
+  LogicProjectPath: ${{ github.WORKSPACE }}/AnimalAdoption.Common.Logic
+  
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -23,9 +26,24 @@ jobs:
       run: dotnet build --no-restore
 #     - name: Test
 #       run: dotnet test --no-build --verbosity normal
-    - name: List out directory contents
-      run: |
-            echo "Listing the contents of the GitHub workspace directory"
-            ls ${{ github.workspace }}
-            echo "Recursively listing all contents of the current directory"
-            ls -R
+#     - name: List out directory contents
+#       run: |
+#             echo "Listing the contents of the GitHub workspace directory"
+#             ls ${{ github.workspace }}
+#             echo "Recursively listing all contents of the current directory"
+#             ls -R    
+      
+    # Authenticates packages to push to GPR
+    - name: Setup .NET Core @ Latest
+      uses: actions/setup-dotnet@v1
+      with:
+        source-url: ${{ env.GitHubPackageFeedUrl }}
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub automatically creates a GITHUB_TOKEN secret to use in your workflow
+
+    - name: Package up project
+      run: dotnet pack --configuration Release ${{ env.LogicProjectPath }}
+
+    - name: Push package to GitHub registry
+      run: dotnet nuget push ${{ env.LogicProjectPath }}/**/*.nupkg --skip-duplicate
+
