--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -6,7 +6,7 @@ on:
 #   pull_request:
 #     branches: [ master ]
 env:
-  GitHubPackageFeedUrl: https://nuget.pkg.github.com/(your-organisation-name)/index.json
+  GitHubPackageFeedUrl: https://nuget.pkg.github.com/animal-adoption-portal/index.json
   LogicProjectPath: ${{ github.WORKSPACE }}/AnimalAdoption.Common.Logic
   
 jobs:
