--- a/AnimalAdoption.Common.Logic/AnimalAdoption.Common.Logic.csproj
+++ b/AnimalAdoption.Common.Logic/AnimalAdoption.Common.Logic.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/github-org-test-pyj/animal-adoption-portal.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
